[package]
name = "interview-rust-senior"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
poem = { version = "3.1.7", features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.2", features = ["v4"] }
reqwest = "0.12.12"
